* feat(Navbar.css): add styles for dropdown hide and show transitions * fix(Navbar.jsx): fix dropdownClass to include "dropdown-hide" when dropdownVisible is false * feat(FoodAndDrinkContent.jsx): add language support for Arabic and English, and display food and drink content based on language

--- a/Frontend/src/components/Navbar/Navbar.css
+++ b/Frontend/src/components/Navbar/Navbar.css
@@ -585,3 +585,71 @@ a {
   font-size: 1.484375vw;
   z-index: 5555;
 }
+
+.dropdown-hide .contnet .article-card {
+  transition: opacity 0.9s;
+  opacity: 0;
+  border: none;
+  transition: opacity 0.9s;
+}
+
+.dropdown-show .contnet .article-card {
+  transition: 0.9s;
+  opacity: 1;
+  transition: 0.9s;
+}
+
+.foot-card-wrapper {
+  margin-top: 40px;
+  display: flex;
+  gap: 20px;
+}
+
+.foot-card {
+  width: 33.33%;
+  box-shadow: 0.1rem 0.1rem 1rem 0.1rem rgba(0, 0, 0, 0.08);
+  padding: 0;
+  position: relative;
+}
+
+.foot-card img {
+  border-radius: 8px 8px 0 0;
+  height: 100%;
+}
+
+.foot-card .foot-img {
+  height: 125px;
+}
+
+.foot-card h5 {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: #515151;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  visibility: visible;
+  font-size: 1.24vw;
+  margin-top: 20px;
+  padding: 0 10px;
+  font-weight: 600;
+  line-height: 1.3;
+  flex: 1;
+  margin-bottom: 10vh;
+}
+
+.foot-card a {
+  width: 100%;
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding: 0 10px;
+  margin-top: 20px;
+  justify-content: space-between;
+  color: #087e8c;
+  padding-top: 10px;
+  text-decoration: none;
+}
